# foxcraft

./: .gitmodules  CMakeLists.txt  NOTES  README.md
cmake/: dependency.cmake
dependencies/: CMakeLists.txt
foxcraft/: CMakeLists.txt  foxcraft.hpp  test.cpp
